--- a/app/src/main/res/drawable/camera_back.xml
+++ b/app/src/main/res/drawable/camera_back.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="19.041dp"
     android:height="15.221dp"
+    android:autoMirrored="true"
     android:viewportWidth="19.041"
     android:viewportHeight="15.221">
   <path
