--- a/app/src/main/res/drawable/main.xml
+++ b/app/src/main/res/drawable/main.xml
@@ -1,9 +1,21 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
-    android:height="24.924dp"
+    android:height="24.93dp"
     android:viewportWidth="24"
-    android:viewportHeight="24.924">
+    android:viewportHeight="24.93">
   <path
-      android:pathData="M22.786,5.693l-1.158,-0.651 -8.489,-4.744a2.372,2.372 0,0 0,-2.3 0l-5.221,2.911 -4.411,2.468a2.38,2.38 0,0 0,-1.206 2.063v14.828a2.356,2.356 0,0 0,2.357 2.356h3.919v-6.577a2.573,2.573 0,0 1,2.578 -2.578h6.205a2.58,2.58 0,0 1,2.586 2.578v6.577h3.991a2.363,2.363 0,0 0,2.364 -2.356v-14.821A2.333,2.333 0,0 0,22.786 5.693ZM21.517,14.412a0.889,0.889 0,0 1,-0.889 0.9,0.9 0.9,0 0,1 -0.9,-0.9v-5a0.885,0.885 0,0 0,-0.444 -0.77l-5.213,-3.015a0.893,0.893 0,0 1,-0.325 -1.214,0.889 0.889,0 0,1 0.777,-0.444 0.909,0.909 0,0 1,0.444 0.119l5.038,2.912 0.381,0.206a2.284,2.284 0,0 1,1.127 1.968Z"
+      android:pathData="M22.786,5.693l-1.159,-0.651 -8.489,-4.744a2.371,2.371 0,0 0,-2.3 0l-5.22,2.911 -4.411,2.468a2.38,2.38 0,0 0,-1.206 2.063v14.828a2.356,2.356 0,0 0,2.356 2.356h3.919v-6.577a2.573,2.573 0,0 1,2.579 -2.578h6.2a2.58,2.58 0,0 1,2.587 2.578v6.577h3.99a2.363,2.363 0,0 0,2.365 -2.356v-14.821A2.335,2.335 0,0 0,22.786 5.693ZM21.516,14.412a0.893,0.893 0,1 1,-1.785 0v-5a0.883,0.883 0,0 0,-0.444 -0.77l-5.213,-3.015a0.889,0.889 0,0 1,0.453 -1.658,0.916 0.916,0 0,1 0.444,0.119l5.038,2.912 0.381,0.206a2.284,2.284 0,0 1,1.126 1.968Z"
+      android:fillColor="#5a5a5a"/>
+  <path
+      android:pathData="M10.908,21.141l-3.171,2.879L7.737,18.752a1.285,1.285 0,0 1,0.067 -0.425Z"
+      android:fillColor="#5a5a5a"/>
+  <path
+      android:pathData="M15.089,24.93h-6.229l3.111,-2.825Z"
+      android:fillColor="#5a5a5a"/>
+  <path
+      android:pathData="M15.089,17.346l-3.117,2.825 -3.111,-2.819a1.611,1.611 0,0 1,0.306 -0.033h5.63A2.13,2.13 0,0 1,15.089 17.346Z"
+      android:fillColor="#5a5a5a"/>
+  <path
+      android:pathData="M16.226,18.752v5.285l-3.191,-2.892 3.118,-2.831A1.368,1.368 0,0 1,16.226 18.752Z"
       android:fillColor="#5a5a5a"/>
 </vector>
