--- a/app/src/main/res/layout/activity_card_information.xml
+++ b/app/src/main/res/layout/activity_card_information.xml
@@ -4,11 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
-    android:theme="@style/Theme.Agrican"
-    tools:context="com.paymob.acceptsdk.PayActivity">
-
+    android:orientation="vertical"
+    android:theme="@style/Theme.AppCompat.NoActionBar" >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -50,14 +48,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_field"
+                    android:gravity="left"
                     android:hint="JOHN DOE"
-                    android:textDirection="anyRtl"
                     android:imeOptions="actionNext"
                     android:inputType="textCapCharacters"
-                    android:gravity="left"
                     android:padding="@dimen/normal_padding_value"
                     android:textColor="@color/colorText"
                     android:textColorHint="@color/colorHint"
+                    android:textDirection="anyRtl"
                     android:textSize="@dimen/normal_text_size"
                     android:textStyle="bold" />
 
@@ -83,14 +81,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_field"
+                    android:gravity="left"
                     android:hint="XXXX-XXXX-XXXX-XXXX"
                     android:imeOptions="actionNext"
                     android:inputType="number"
-                    android:textDirection="anyRtl"
-                    android:gravity="left"
                     android:padding="@dimen/normal_padding_value"
                     android:textColor="@color/colorText"
                     android:textColorHint="@color/colorHint"
+                    android:textDirection="anyRtl"
                     android:textSize="@dimen/normal_text_size"
                     android:textStyle="bold" />
 
@@ -100,9 +98,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/large_padding_value"
-                android:weightSum="2"
+                android:baselineAligned="false"
                 android:orientation="horizontal"
-                android:baselineAligned="false">
+                android:weightSum="2">
 
                 <LinearLayout
                     android:id="@+id/expiration_linearLayout"
@@ -134,17 +132,17 @@
                             android:layout_gravity="start"
                             android:layout_weight="2"
                             android:background="@drawable/edit_text_field"
+                            android:gravity="left"
                             android:hint="MM"
                             android:imeOptions="actionNext"
                             android:inputType="number"
-                            android:textDirection="locale"
-                            android:gravity="left"
-
                             android:maxLength="2"
+
                             android:maxLines="1"
                             android:padding="@dimen/normal_padding_value"
                             android:textColor="@color/colorText"
                             android:textColorHint="@color/colorHint"
+                            android:textDirection="locale"
                             android:textSize="@dimen/normal_text_size"
                             android:textStyle="bold" />
 
@@ -167,16 +165,16 @@
                             android:layout_gravity="right"
                             android:layout_weight="2"
                             android:background="@drawable/edit_text_field"
+                            android:gravity="left"
                             android:hint="YY"
                             android:imeOptions="actionNext"
                             android:inputType="number"
                             android:maxLength="2"
                             android:maxLines="1"
-                            android:textDirection="anyRtl"
-                            android:gravity="left"
                             android:padding="@dimen/normal_padding_value"
                             android:textColor="@color/colorText"
                             android:textColorHint="@color/colorHint"
+                            android:textDirection="anyRtl"
                             android:textSize="@dimen/normal_text_size"
                             android:textStyle="bold" />
 
@@ -204,16 +202,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/edit_text_field"
+                        android:gravity="left"
                         android:hint="123"
                         android:inputType="number"
                         android:maxLength="3"
                         android:maxLines="1"
-                        android:gravity="left"
                         android:padding="@dimen/normal_padding_value"
                         android:textColor="@color/colorText"
                         android:textColorHint="@color/colorHint"
-                        android:textSize="@dimen/normal_text_size"
                         android:textDirection="anyRtl"
+                        android:textSize="@dimen/normal_text_size"
 
                         android:textStyle="bold" />
 
@@ -225,9 +223,9 @@
                 android:id="@+id/saveCard_linearLayout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/normal_padding_value"
                 android:gravity="top|center_horizontal"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/normal_padding_value">
+                android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatCheckBox
                     android:id="@+id/saveCardCheckBox"
