--- a/app/src/main/res/layout/activity_card_information.xml
+++ b/app/src/main/res/layout/activity_card_information.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.paymob.acceptsdk.PayActivity">
-
+    android:background="@color/white">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/PoweredByLinearLayout"
         android:layout_alignParentTop="true"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/PoweredByLinearLayout"
+        android:paddingLeft="@dimen/large_padding_value"
+        android:paddingTop="@dimen/small_padding_value"
+        android:paddingRight="@dimen/large_padding_value"
+        android:paddingBottom="@dimen/normal_padding_value"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -31,7 +28,7 @@
                 android:id="@+id/cardName_linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/large_padding_value"
                 android:orientation="vertical">
 
 
@@ -39,10 +36,10 @@
                     android:id="@+id/fullname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginBottom="@dimen/tiny_padding_value"
                     android:text="@string/card_holder_name"
                     android:textColor="@color/colorText"
-                    android:textSize="14sp" />
+                    android:textSize="@dimen/normal_text_size" />
 
                 <EditText
                     android:id="@+id/cardName"
@@ -54,10 +51,10 @@
                     android:imeOptions="actionNext"
                     android:inputType="textCapCharacters"
                     android:gravity="left"
-                    android:padding="15dp"
+                    android:padding="@dimen/normal_padding_value"
                     android:textColor="@color/colorText"
                     android:textColorHint="@color/colorHint"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/normal_text_size"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -65,17 +62,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/large_padding_value"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/cardnumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginBottom="@dimen/tiny_padding_value"
                     android:text="@string/card_number"
                     android:textColor="@color/colorText"
-                    android:textSize="14sp" />
+                    android:textSize="@dimen/normal_text_size" />
 
                 <morxander.editcard.EditCard
                     android:id="@+id/cardNumber"
@@ -87,10 +84,10 @@
                     android:inputType="number"
                     android:textDirection="anyRtl"
                     android:gravity="left"
-                    android:padding="15dp"
+                    android:padding="@dimen/normal_padding_value"
                     android:textColor="@color/colorText"
                     android:textColorHint="@color/colorHint"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/normal_text_size"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -98,7 +95,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/large_padding_value"
                 android:weightSum="2"
                 android:orientation="horizontal"
                 android:baselineAligned="false">
@@ -107,8 +104,8 @@
                     android:id="@+id/expiration_linearLayout"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginEnd="@dimen/large_padding_value"
+                    android:layout_marginRight="@dimen/large_padding_value"
                     android:layout_weight="1.3"
                     android:orientation="vertical">
 
@@ -116,10 +113,10 @@
                         android:id="@+id/expiry"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
+                        android:layout_marginBottom="@dimen/tiny_padding_value"
                         android:text="@string/Expiration"
                         android:textColor="@color/colorText"
-                        android:textSize="14sp" />
+                        android:textSize="@dimen/normal_text_size" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -141,10 +138,10 @@
 
                             android:maxLength="2"
                             android:maxLines="1"
-                            android:padding="15dp"
+                            android:padding="@dimen/normal_padding_value"
                             android:textColor="@color/colorText"
                             android:textColorHint="@color/colorHint"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/normal_text_size"
                             android:textStyle="bold" />
 
                         <TextView
@@ -152,11 +149,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/edit_text_field"
-                            android:padding="15dp"
+                            android:padding="@dimen/normal_padding_value"
                             android:text=" / "
                             android:textColor="@color/colorText"
                             android:textColorHint="@color/colorHint"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/normal_text_size"
                             android:textStyle="bold" />
 
                         <EditText
@@ -173,10 +170,10 @@
                             android:maxLines="1"
                             android:textDirection="anyRtl"
                             android:gravity="left"
-                            android:padding="15dp"
+                            android:padding="@dimen/normal_padding_value"
                             android:textColor="@color/colorText"
                             android:textColorHint="@color/colorHint"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/normal_text_size"
                             android:textStyle="bold" />
 
                     </LinearLayout>
@@ -193,10 +190,10 @@
                         android:id="@+id/cvvnum"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
+                        android:layout_marginBottom="@dimen/tiny_padding_value"
                         android:text="@string/cvv"
                         android:textColor="@color/colorText"
-                        android:textSize="14sp" />
+                        android:textSize="@dimen/normal_text_size" />
 
                     <EditText
                         android:id="@+id/cvv"
@@ -208,10 +205,10 @@
                         android:maxLength="3"
                         android:maxLines="1"
                         android:gravity="left"
-                        android:padding="15dp"
+                        android:padding="@dimen/normal_padding_value"
                         android:textColor="@color/colorText"
                         android:textColorHint="@color/colorHint"
-                        android:textSize="14sp"
+                        android:textSize="@dimen/normal_text_size"
                         android:textDirection="anyRtl"
 
                         android:textStyle="bold" />
@@ -226,7 +223,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="top|center_horizontal"
                 android:orientation="horizontal"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="@dimen/normal_padding_value">
 
                 <androidx.appcompat.widget.AppCompatCheckBox
                     android:id="@+id/saveCardCheckBox"
@@ -250,46 +247,12 @@
                 android:id="@+id/pay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/normal_padding_value"
                 android:background="@drawable/button_shape"
                 android:text="@string/pay_button"
                 android:textColor="#FFFFFF"
-                android:textSize="15sp" />
+                android:textSize="@dimen/large_text_size" />
 
         </LinearLayout>
-
     </ScrollView>
-
-    <LinearLayout
-        android:id="@+id/PoweredByLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:paddingBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="end"
-            android:text="Powered by"
-            android:textColor="@color/colorText"
-            android:textSize="14sp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/pm_logo_2" />
-
-    </LinearLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
