--- a/app/src/main/res/layout/activity_card_information.xml
+++ b/app/src/main/res/layout/activity_card_information.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/white">
 
@@ -34,7 +35,7 @@
 
                 <TextView
                     android:id="@+id/fullname"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/tiny_padding_value"
                     android:text="@string/card_holder_name"
@@ -46,16 +47,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_field"
-                    android:hint="JOHN DOE"
                     android:textDirection="anyRtl"
                     android:imeOptions="actionNext"
                     android:inputType="textCapCharacters"
-                    android:gravity="left"
                     android:padding="@dimen/normal_padding_value"
                     android:textColor="@color/colorText"
                     android:textColorHint="@color/colorHint"
                     android:textSize="@dimen/normal_text_size"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:importantForAutofill="no" />
 
             </LinearLayout>
 
@@ -67,7 +67,7 @@
 
                 <TextView
                     android:id="@+id/cardnumber"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/tiny_padding_value"
                     android:text="@string/card_number"
@@ -79,11 +79,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_field"
-                    android:hint="XXXX-XXXX-XXXX-XXXX"
                     android:imeOptions="actionNext"
                     android:inputType="number"
                     android:textDirection="anyRtl"
-                    android:gravity="left"
                     android:padding="@dimen/normal_padding_value"
                     android:textColor="@color/colorText"
                     android:textColorHint="@color/colorHint"
@@ -105,13 +103,13 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/large_padding_value"
-                    android:layout_marginRight="@dimen/large_padding_value"
+                    android:layout_marginStart="@dimen/large_padding_value"
                     android:layout_weight="1.3"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/expiry"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/tiny_padding_value"
                         android:text="@string/Expiration"
@@ -134,15 +132,16 @@
                             android:imeOptions="actionNext"
                             android:inputType="number"
                             android:textDirection="locale"
-                            android:gravity="left"
-
+                            android:gravity="start"
                             android:maxLength="2"
                             android:maxLines="1"
                             android:padding="@dimen/normal_padding_value"
                             android:textColor="@color/colorText"
                             android:textColorHint="@color/colorHint"
                             android:textSize="@dimen/normal_text_size"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            tools:ignore="HardcodedText"
+                            android:importantForAutofill="no" />
 
                         <TextView
                             android:id="@+id/Slash"
@@ -154,13 +153,14 @@
                             android:textColor="@color/colorText"
                             android:textColorHint="@color/colorHint"
                             android:textSize="@dimen/normal_text_size"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            tools:ignore="HardcodedText" />
 
                         <EditText
                             android:id="@+id/expiryYear"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right"
+                            android:layout_gravity="end"
                             android:layout_weight="2"
                             android:background="@drawable/edit_text_field"
                             android:hint="YY"
@@ -169,12 +169,14 @@
                             android:maxLength="2"
                             android:maxLines="1"
                             android:textDirection="anyRtl"
-                            android:gravity="left"
+                            android:gravity="start"
                             android:padding="@dimen/normal_padding_value"
                             android:textColor="@color/colorText"
                             android:textColorHint="@color/colorHint"
                             android:textSize="@dimen/normal_text_size"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:importantForAutofill="no"
+                            tools:ignore="HardcodedText"/>
 
                     </LinearLayout>
 
@@ -188,7 +190,7 @@
 
                     <TextView
                         android:id="@+id/cvvnum"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/tiny_padding_value"
                         android:text="@string/cvv"
@@ -200,47 +202,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/edit_text_field"
-                        android:hint="123"
                         android:inputType="number"
                         android:maxLength="3"
                         android:maxLines="1"
-                        android:gravity="left"
                         android:padding="@dimen/normal_padding_value"
                         android:textColor="@color/colorText"
                         android:textColorHint="@color/colorHint"
                         android:textSize="@dimen/normal_text_size"
                         android:textDirection="anyRtl"
-
-                        android:textStyle="bold" />
-
+                        android:textStyle="bold"
+                        android:importantForAutofill="no" />
                 </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/saveCard_linearLayout"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top|center_horizontal"
-                android:orientation="horizontal"
-                android:layout_marginTop="@dimen/normal_padding_value">
-
-                <androidx.appcompat.widget.AppCompatCheckBox
-                    android:id="@+id/saveCardCheckBox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:shadowColor="@color/colorHint" />
-
-                <TextView
-                    android:id="@+id/saveCardText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:text="@string/save_card"
-                    android:textColor="@color/colorText"
-                    android:textSize="15sp" />
-
             </LinearLayout>
 
             <Button
