--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,11 +5,17 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
 
     <color name="colorPrimaryDark">#FF000000</color>
     <color name="colorPrimary">#FF000000</color>
-    <color name="colorAccent">#FF000000</color>
+<!--    <color name="colorAccent">#FF000000</color>-->
 
     <color name="white">#FFFFFFFF</color>
+    <color name="black">#FF000000</color>
+    <color name="red">#FFae2a19</color>
+    <color name="greenDark">#FF379237</color>
+    <color name="greenLight">#FF54B435</color>
+    <color name="gray">#FFc6c6c6</color>
+    <color name="textGray">#FF727272</color>
+    <color name="iconGray">#FF5a5a5a</color>
 </resources>
