--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -2,7 +2,8 @@
 <resources>
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">#FFFFFFFF</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_inset</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/animated_splash</item>
+<!--        <item name="splashScreenIconSize">1000dp</item>-->
         <item name="postSplashScreenTheme">@style/Theme.Agrican</item>
     </style>
 </resources>
