--- a/app/src/main/res/drawable/animated_splash.xml
+++ b/app/src/main/res/drawable/animated_splash.xml
@@ -1,9 +1,6 @@
 <animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:drawable="@drawable/avectordrawable">
     <target
-        android:name="rotationGroup"
-        android:animation="@animator/rotation" />
-    <target
-        android:name="v"
-        android:animation="@animator/path_morph" />
+        android:name="scaleGroup"
+        android:animation="@animator/scale" />
 </animated-vector>
