--- a/app/src/main/res/animator/scale.xml
+++ b/app/src/main/res/animator/scale.xml
@@ -1,5 +1,17 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
+<!--    <objectAnimator-->
+<!--        android:propertyName="pivotX"-->
+<!--        android:valueFrom="0.0"-->
+<!--        android:valueTo="0.5"-->
+<!--        android:duration="1000"/>-->
+
+<!--    <objectAnimator-->
+<!--        android:propertyName="pivotY"-->
+<!--        android:valueFrom="0.0"-->
+<!--        android:valueTo="0.5"-->
+<!--        android:duration="1000"/>-->
+
     <!-- Zoom In -->
 
     <objectAnimator
